--- a/index.html
+++ b/index.html
@@ -4,29 +4,29 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Éxodo Digital</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
+
+  <!-- ENCABEZADO MEJORADO -->
   <header>
-    <h1>Bienvenido a Éxodo Digital</h1>
+    <h1>Bienvenido a <span class="marca">Éxodo Digital</span></h1>
     <nav>
       <ul>
-        <li><a href="#inicio">Inicio</a></li>
-        <li><a href="#servicios">Servicios</a></li>
+        <li><a href="#productos">Productos / Servicios</a></li>
+        <li><a href="#blog">Blog Corporativo</a></li>
+        <li><a href="#quienes-somos">Quiénes Somos</a></li>
         <li><a href="#contacto">Contacto</a></li>
       </ul>
     </nav>
   </header>
 
+  <!-- CONTENIDO PRINCIPAL -->
   <main>
-    <section id="inicio">
-      <h2>Transformamos ideas en soluciones digitales</h2>
-      <p>Potencia tu aprendizaje y presencia en línea con nuestros servicios.</p>
-      <button onclick="mostrarMensaje()">¡Conoce más!</button>
-    </section>
 
-    <section id="servicios">
-      <h2>Servicios</h2>
+    <section id="productos">
+      <h2>Productos / Servicios</h2>
+      <p>Potencia tu aprendizaje y presencia en línea con nuestros servicios.</p>
       <ul>
         <li>Diseño web educativo</li>
         <li>Integración de chatbots</li>
@@ -34,7 +34,17 @@
       </ul>
     </section>
 
-    <section id="Tu nombre"></section>
+    <section id="blog">
+      <h2>Blog Corporativo</h2>
+      <p>Explora artículos, guías y reflexiones sobre tecnología y transformación digital.</p>
+    </section>
+
+    <section id="quienes-somos">
+      <h2>¿Quiénes Somos?</h2>
+      <p>Somos un equipo apasionado por impulsar ideas digitales con propósito.</p>
+    </section>
+
+    <section id="contacto">
       <h2>Contáctanos</h2>
       <form>
         <input type="text" placeholder="Tu nombre" required />
@@ -43,8 +53,10 @@
         <button type="submit">Enviar</button>
       </form>
     </section>
+
   </main>
 
+  <!-- PIE DE PÁGINA -->
   <footer>
     <p>&copy; 2025 Éxodo Digital. Todos los derechos reservados.</p>
   </footer>
@@ -52,3 +64,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
