--- a/index.html
+++ b/index.html
@@ -4,64 +4,51 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Éxodo Digital</title>
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
-  <!-- ENCABEZADO MEJORADO -->
   <header>
-    <h1>Bienvenido a <span class="marca">Éxodo Digital</span></h1>
+    <h1 class="marca">Éxodo Digital</h1>
     <nav>
       <ul>
-        <li><a href="#productos">Productos / Servicios</a></li>
-        <li><a href="#blog">Blog Corporativo</a></li>
-        <li><a href="#quienes-somos">Quiénes Somos</a></li>
+        <li><a href="#servicios">Servicios</a></li>
+        <li><a href="#sobre">Nosotros</a></li>
         <li><a href="#contacto">Contacto</a></li>
       </ul>
     </nav>
   </header>
 
-  <!-- CONTENIDO PRINCIPAL -->
   <main>
-
-    <section id="productos">
-      <h2>Productos / Servicios</h2>
-      <p>Potencia tu aprendizaje y presencia en línea con nuestros servicios.</p>
-      <ul>
-        <li>Diseño web educativo</li>
-        <li>Integración de chatbots</li>
-        <li>Branding auténtico</li>
-      </ul>
+    <section id="hero">
+      <h2>Impulsamos tu presencia digital</h2>
+      <p>Páginas web modernas, efectivas y adaptadas a tu negocio.</p>
+      <button>Solicita tu demo</button>
     </section>
 
-    <section id="blog">
-      <h2>Blog Corporativo</h2>
-      <p>Explora artículos, guías y reflexiones sobre tecnología y transformación digital.</p>
+    <section id="servicios">
+      <h2>Nuestros Servicios</h2>
+      <!-- Detalles a rellenar -->
     </section>
 
-    <section id="quienes-somos">
-      <h2>¿Quiénes Somos?</h2>
-      <p>Somos un equipo apasionado por impulsar ideas digitales con propósito.</p>
+    <section id="sobre">
+      <h2>¿Quiénes somos?</h2>
+      <!-- Historia / misión -->
     </section>
 
     <section id="contacto">
       <h2>Contáctanos</h2>
-      <form>
-        <input type="text" placeholder="Tu nombre" required />
-        <input type="email" placeholder="Tu correo" required />
-        <textarea placeholder="Mensaje" required></textarea>
-        <button type="submit">Enviar</button>
-      </form>
+      <!-- Formulario -->
     </section>
-
   </main>
 
-  <!-- PIE DE PÁGINA -->
   <footer>
-    <p>&copy; 2025 Éxodo Digital. Todos los derechos reservados.</p>
+    <p>© 2025 Éxodo Digital. Todos los derechos reservados.</p>
   </footer>
 
   <script src="script.js"></script>
 </body>
 </html>
+
 
