--- a/index.html
+++ b/index.html
@@ -38,9 +38,21 @@
     </section>
 
     <section id="contacto">
-      <h2>Contáctanos</h2>
-      <!-- Formulario -->
-    </section>
+  <h2>Contáctanos</h2>
+  <form action="https://formsubmit.co/kingaczinokodigo@gmail.com" method="POST">
+    <!-- Evita el captcha de FormSubmit -->
+    <input type="hidden" name="_captcha" value="false">
+
+    <!-- Redirigir luego del envío (opcional) -->
+    <input type="hidden" name="_next" value="https://tusitio.com/gracias.html">
+
+    <input type="text" name="nombre" placeholder="Tu nombre" required />
+    <input type="email" name="correo" placeholder="Correo electrónico" required />
+    <textarea name="mensaje" rows="4" placeholder="¿En qué podemos ayudarte?" required></textarea>
+    <button type="submit">Enviar mensaje</button>
+  </form>
+</section>
+
   </main>
 
   <footer>
@@ -50,5 +62,35 @@
   <script src="script.js"></script>
 </body>
 </html>
+<section id="servicios">
+  <h2>Nuestros Servicios</h2>
+  <div class="servicios-grid">
+    <article>
+      <h3>Landing Pages</h3>
+      <p>Páginas rápidas, modernas y centradas en conversión.</p>
+    </article>
+    <article>
+      <h3>Tiendas Online</h3>
+      <p>E-commerce funcional y estético, 100% administrable.</p>
+    </article>
+    <article>
+      <h3>Web Corporativa</h3>
+      <p>Tu marca digital con enfoque profesional y confiable.</p>
+    </article>
+  </div>
+</section>
+<section id="sobre">
+  <h2>Sobre Éxodo Digital</h2>
+  <p>Somos un equipo apasionado por el diseño y desarrollo web. Ayudamos a emprendedores y negocios a tener presencia digital con estilo, estrategia y resultados.</p>
+</section>
+<section id="contacto">
+  <h2>Contáctanos</h2>
+  <form>
+    <input type="text" placeholder="Tu nombre" required />
+    <input type="email" placeholder="Correo electrónico" required />
+    <textarea rows="4" placeholder="¿En qué podemos ayudarte?" required></textarea>
+    <button type="submit">Enviar mensaje</button>
+  </form>
+</section>
 
 
