--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
   <link rel="stylesheet" href="styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
+<!-- Otras secciones de tu sitio aquí -->
+
+<!-- asistente boton  -->
+<a href="https://wa.me/3132056515" class="whatsapp-float" target="_blank" rel="noopener">
+  <img src="https://cdn.jsdelivr.net/gh/rafaelbotazini/floating-whatsapp/whatsapp-icon.png" alt="WhatsApp" />
+</a>
+
+<a href="https://www.chatbase.co/chatbot-iframe/eIrzI-2lWZ2UNDvJmKXhr" class="chatbot-float" target="_blank" rel="noopener">
+  <img src="https://img.icons8.com/ios-filled/50/ffffff/chatbot.png" alt="Asistente Virtual" />
+  <span class="chatbot-label">¿Tienes dudas?</span>
+</a>
+
+</body>
+</html>
+
+
 <body>
 
   <header>
