--- a/index.html
+++ b/index.html
@@ -34,26 +34,31 @@
     </section>
 
     <section id="servicios">
-      <h2>Nuestros Servicios</h2>
-      <div class="servicios-grid">
-        <article>
-          <h3>Landing Pages</h3>
-          <p>Páginas rápidas, modernas y centradas en conversión.</p>
-        </article>
-        <article>
-          <h3>Tiendas Online</h3>
-          <p>E-commerce funcional y estético, 100% administrable.</p>
-        </article>
-        <article>
-          <h3>Web Corporativa</h3>
-          <p>Tu marca digital con enfoque profesional y confiable.</p>
-        </article>
-      </div>
-    </section>
+  <h2>Nuestros Servicios</h2>
+  <div class="servicios-grid">
+    <article>
+      <h3>Landing Pages Estratégicas</h3>
+      <p>Diseños modernos y dinámicos orientados a conversión, con identidad auténtica y navegación intuitiva.</p>
+    </article>
+    <article>
+      <h3>Tiendas Online Autoadministrables</h3>
+      <p>Desarrollamos plataformas e-commerce accesibles, funcionales y alineadas con tu marca. Fácil de gestionar, potente para crecer.</p>
+    </article>
+    <article>
+      <h3>Web Corporativa con Propósito</h3>
+      <p>Impulsa tu presencia digital con sitios profesionales, accesibles y diseñados para comunicar confianza y autenticidad.</p>
+    </article>
+  </div>
+</section>
+
 
     <section id="sobre">
       <h2>Sobre Éxodo Digital</h2>
-      <p>Somos un equipo apasionado por el diseño y desarrollo web. Ayudamos a emprendedores y negocios a tener presencia digital con estilo, estrategia y resultados.</p>
+      <p>Conectamos propósito, diseño y tecnología.
+
+Éxodo Digital nace con una visión clara: democratizar el acceso a soluciones digitales profesionales, auténticas y funcionales. Nos especializamos en el desarrollo de páginas web que no solo transmiten tu mensaje, sino que lo convierten en una experiencia accesible, armoniosa y memorable.
+
+Trabajamos desde la comprensión profunda de cada proyecto, con un enfoque humano y estratégico. Nuestra meta es que tu presencia en línea hable con fuerza, claridad y propósito.</p>
     </section>
 
     <section id="contacto">
