--- a/index.html
+++ b/index.html
@@ -52,14 +52,18 @@
 </section>
 
 
-    <section id="sobre">
-      <h2>Sobre Éxodo Digital</h2>
-      <p>Conectamos propósito, diseño y tecnología.
-
-Éxodo Digital nace con una visión clara: democratizar el acceso a soluciones digitales profesionales, auténticas y funcionales. Nos especializamos en el desarrollo de páginas web que no solo transmiten tu mensaje, sino que lo convierten en una experiencia accesible, armoniosa y memorable.
-
-Trabajamos desde la comprensión profunda de cada proyecto, con un enfoque humano y estratégico. Nuestra meta es que tu presencia en línea hable con fuerza, claridad y propósito.</p>
-    </section>
+   <section id="sobre">
+  <div class="sobre-card">
+    <h2>Sobre Éxodo Digital</h2>
+    <p>
+      <span class="sobre-destacado">Conectamos propósito, diseño y tecnología.</span>
+      <br><br>
+      Éxodo Digital nace con una visión clara: democratizar el acceso a soluciones digitales profesionales, auténticas y funcionales. Nos especializamos en el desarrollo de páginas web que no solo transmiten tu mensaje, sino que lo convierten en una experiencia accesible, armoniosa y memorable.
+      <br><br>
+      Trabajamos desde la comprensión profunda de cada proyecto, con un enfoque humano y estratégico. Nuestra meta es que tu presencia en línea hable con fuerza, claridad y propósito.
+    </p>
+  </div>
+</section>
 
     <section id="contacto">
       <h2>Contáctanos</h2>
