--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+<button onclick="cambiarModo()">Cambiar modo<button/>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Éxodo Digital</title>
@@ -30,6 +31,7 @@ toggle.addEventListener('change', function() {
 </script>
 
 <body>
+  
 
   <!-- Header MODERNO inicia aquí -->
   <header class="main-header">
