--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
 
   <meta charset="UTF-8" />
@@ -11,34 +12,38 @@
 
 
 <script>
-const toggle = document.getElementById('theme-toggle');
-const root = document.documentElement;
+  const toggle = document.getElementById('theme-toggle');
+  const root = document.documentElement;
 
-// Guardar preferencia
-if (localStorage.getItem('theme') === 'dark') {
-  root.classList.add('dark-mode');
-  toggle.checked = true;
-}
-toggle.addEventListener('change', function() {
-  if (this.checked) {
+  // Guardar preferencia
+  if (localStorage.getItem('theme') === 'dark') {
     root.classList.add('dark-mode');
-    localStorage.setItem('theme', 'dark');
-  } else {
-    root.classList.remove('dark-mode');
-    localStorage.setItem('theme', 'light');
+    toggle.checked = true;
   }
-});
+  toggle.addEventListener('change', function () {
+    if (this.checked) {
+      root.classList.add('dark-mode');
+      localStorage.setItem('theme', 'dark');
+    } else {
+      root.classList.remove('dark-mode');
+      localStorage.setItem('theme', 'light');
+    }
+  });
 </script>
 
 <body>
-  
+
 
   <!-- Header MODERNO inicia aquí -->
   <header class="main-header">
     <div class="container">
+      <div class="logo-header">
+        <img src="logo/log.png" alt="Logo Éxodo Digital" class="logo-img">
+      </div>
+      
       <h1>Éxodo Digital</h1>
       <nav>
-        <input type="checkbox" id="menu-toggle"/>
+        <input type="checkbox" id="menu-toggle" />
         <label for="menu-toggle" class="menu-icon">&#9776;</label>
         <ul class="nav-links">
           <li><a href="#servicios">Servicios</a></li>
@@ -48,12 +53,12 @@ toggle.addEventListener('change', function() {
       </nav>
     </div>
     <div class="theme-switch-wrapper">
-  <label class="theme-switch" for="theme-toggle">
-    <input type="checkbox" id="theme-toggle" />
-    <span class="slider"></span>
-  </label>
-  <span class="theme-label">🌙</span>
-</div>
+      <label class="theme-switch" for="theme-toggle">
+        <input type="checkbox" id="theme-toggle" />
+        <span class="slider"></span>
+      </label>
+      <span class="theme-label">🌙</span>
+    </div>
   </header>
   <!-- Header MODERNO termina aquí -->
 
@@ -65,36 +70,41 @@ toggle.addEventListener('change', function() {
     </section>
 
     <section id="servicios">
-  <h2>Nuestros Servicios</h2>
-  <div class="servicios-grid">
-    <article>
-      <h3>Landing Pages Estratégicas</h3>
-      <p>Diseños modernos y dinámicos orientados a conversión, con identidad auténtica y navegación intuitiva.</p>
-    </article>
-    <article>
-      <h3>Tiendas Online Autoadministrables</h3>
-      <p>Desarrollamos plataformas e-commerce accesibles, funcionales y alineadas con tu marca. Fácil de gestionar, potente para crecer.</p>
-    </article>
-    <article>
-      <h3>Web Corporativa con Propósito</h3>
-      <p>Impulsa tu presencia digital con sitios profesionales, accesibles y diseñados para comunicar confianza y autenticidad.</p>
-    </article>
-  </div>
-</section>
+      <h2>Nuestros Servicios</h2>
+      <div class="servicios-grid">
+        <article>
+          <h3>Landing Pages Estratégicas</h3>
+          <p>Diseños modernos y dinámicos orientados a conversión, con identidad auténtica y navegación intuitiva.</p>
+        </article>
+        <article>
+          <h3>Tiendas Online Autoadministrables</h3>
+          <p>Desarrollamos plataformas e-commerce accesibles, funcionales y alineadas con tu marca. Fácil de gestionar,
+            potente para crecer.</p>
+        </article>
+        <article>
+          <h3>Web Corporativa con Propósito</h3>
+          <p>Impulsa tu presencia digital con sitios profesionales, accesibles y diseñados para comunicar confianza y
+            autenticidad.</p>
+        </article>
+      </div>
+    </section>
 
 
-   <section id="sobre">
-  <div class="sobre-card">
-    <h2>Sobre Éxodo Digital</h2>
-    <p>
-      <span class="sobre-destacado">Conectamos propósito, diseño y tecnología.</span>
-      <br><br>
-      Éxodo Digital nace con una visión clara: democratizar el acceso a soluciones digitales profesionales, auténticas y funcionales. Nos especializamos en el desarrollo de páginas web que no solo transmiten tu mensaje, sino que lo convierten en una experiencia accesible, armoniosa y memorable.
-      <br><br>
-      Trabajamos desde la comprensión profunda de cada proyecto, con un enfoque humano y estratégico. Nuestra meta es que tu presencia en línea hable con fuerza, claridad y propósito.
-    </p>
-  </div>
-</section>
+    <section id="sobre">
+      <div class="sobre-card">
+        <h2>Sobre Éxodo Digital</h2>
+        <p>
+          <span class="sobre-destacado">Conectamos propósito, diseño y tecnología.</span>
+          <br><br>
+          Éxodo Digital nace con una visión clara: democratizar el acceso a soluciones digitales profesionales,
+          auténticas y funcionales. Nos especializamos en el desarrollo de páginas web que no solo transmiten tu
+          mensaje, sino que lo convierten en una experiencia accesible, armoniosa y memorable.
+          <br><br>
+          Trabajamos desde la comprensión profunda de cada proyecto, con un enfoque humano y estratégico. Nuestra meta
+          es que tu presencia en línea hable con fuerza, claridad y propósito.
+        </p>
+      </div>
+    </section>
 
     <section id="contacto">
       <h2>Contáctanos</h2>
@@ -117,13 +127,13 @@ toggle.addEventListener('change', function() {
   <a href="https://wa.me/3132056515" class="whatsapp-float" target="_blank" rel="noopener">
     <img src="https://cdn.jsdelivr.net/gh/rafaelbotazini/floating-whatsapp/whatsapp-icon.png" alt="WhatsApp" />
   </a>
-  <a href="https://www.chatbase.co/chatbot-iframe/eIrzI-2lWZ2UNDvJmKXhr" class="chatbot-float" target="_blank" rel="noopener">
+  <a href="https://www.chatbase.co/chatbot-iframe/eIrzI-2lWZ2UNDvJmKXhr" class="chatbot-float" target="_blank"
+    rel="noopener">
     <img src="https://img.icons8.com/ios-filled/50/ffffff/chatbot.png" alt="Asistente Virtual" />
     <span class="chatbot-label">¿Tienes dudas?</span>
   </a>
 
   <script src="script.js"></script>
 </body>
+
 </html>
-
-
